@@ -4,6 +4,7 @@
 * Replaced the guice dependency with a much lighter gentyref dependency.
 * Added more versatile verification modes.
 * Added stubbing of all methods on a mock.
+* Implemented support for timeout.
 
 ----------------------
 - Version 0.5.0
